# rules_flatbuffers

examples/rust_example/: WORKSPACE
examples/rust_example/geom_fbs/: BUILD.bazel
examples/rust_example/rust_example/: BUILD.bazel  main.rs
examples/rust_example/viz_fbs/: BUILD.bazel
flatbuffers/: repositories.bzl  rust_flatbuffers_library.bzl
flatbuffers/toolchain_defs/: rust_defs.bzl
