load("@rules_flatbuffers//flatbuffers:flatbuffers_library.bzl", "flatbuffers_library")
load("@rules_flatbuffers//flatbuffers:rust_flatbuffers_library.bzl", "rust_flatbuffers_library")

flatbuffers_library(
    name = "geom_fbs",
    srcs = [
        "isometry.fbs",
        "quaternion.fbs",
        "vector.fbs",
    ],
    visibility = ["//visibility:public"],
)

rust_flatbuffers_library(
    name = "geom_rust_fbs",
    deps = [":geom_fbs"],
    visibility = ["//visibility:public"],
)
